# quickscore

./: pyproject.toml  setup.py
src/: __init__.py  __main__.py  score.py
src/translation/: __init__.py  translate.py  translator.py
